fix aboutMePic on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -733,7 +733,7 @@ li {
 
   #aboutMePic {
     display: block;
-    max-width: 50vw;
+    max-width: 35vw;
   }
 
   #expCertDiv {
